tests/security/transformTaintUncheckedHydration/output.txt
ERROR: TaintedData - input.hack:24:12 - Data from input-controlled data loaded without access checks found its way to generic output using path $_GET --array-fetch--> arrayvalue-fetch (input.hack:22:20) ----> $id (input.hack:22:5) ----> EntityLoader::loadEntity#1 (input.hack:7:52) ----> $id (input.hack:7:52) ----> load_from_db#1 (input.hack:1:30) ----> $id (input.hack:1:30) ----> return (input.hack:2:12) ----> call to load_from_db (input.hack:1:36) ----> return (input.hack:9:16) ----> call to EntityLoader::loadEntity (input.hack:8:8) ----> $entity (input.hack:23:5) ----> render#1 (input.hack:24:12)
ERROR: TaintedData - input.hack:25:17 - Data from input-controlled data loaded without access checks found its way to a logging method using path $_GET --array-fetch--> arrayvalue-fetch (input.hack:22:20) ----> $id (input.hack:22:5) ----> EntityLoader::loadEntity#1 (input.hack:7:52) ----> $id (input.hack:7:52) ----> load_from_db#1 (input.hack:1:30) ----> $id (input.hack:1:30) ----> return (input.hack:2:12) ----> call to load_from_db (input.hack:1:36) ----> return (input.hack:9:16) ----> call to EntityLoader::loadEntity (input.hack:8:8) ----> $entity (input.hack:23:5) ----> log_message#1 (input.hack:25:17)
